--- a/src/MeuBolsoDigital.Core.UnitTests/MeuBolsoDigital.Core.UnitTests.csproj
+++ b/src/MeuBolsoDigital.Core.UnitTests/MeuBolsoDigital.Core.UnitTests.csproj
@@ -1,15 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>disable</Nullable>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
-    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0"/>
+    <PackageReference Include="xunit" Version="2.4.1"/>
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -18,10 +15,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="coverlet.msbuild" Version="3.1.2"/>
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\MeuBolsoDigital.Core\MeuBolsoDigital.Core.csproj" />
+    <ProjectReference Include="..\MeuBolsoDigital.Core\MeuBolsoDigital.Core.csproj"/>
   </ItemGroup>
-
 </Project>
